# GPTagger

./: Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: python-app.yml  python-publish.yml
GPTagger/: __init__.py  app.py  constants.py  indexer.py  logger.py  prompt.py  textractor.py
GPTagger/pipelines/: __init__.py  ner.py
GPTagger/validators/: __init__.py  base.py  gpt.py  length.py  regex.py
tests/: test_index.py
tests/test_cases/: indexer.json
